Z3Experiments/Z3Experiments/Parser/PreposeGesturesParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.2.2-SNAPSHOT
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from D:\work\SurroundWeb\private\AROS\GestureRecognizerKinectV2\\Z3Experiments\Z3Experiments\Parser\PreposeGestures.g4 by ANTLR 4.2.2-SNAPSHOT

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591

namespace PreposeGestures {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.2.2-SNAPSHOT")]
[System.CLSCompliant(false)]
public partial class PreposeGesturesParser : Antlr4.Runtime.Parser {
	public const int
		T__76=1, T__75=2, T__74=3, T__73=4, T__72=5, T__71=6, T__70=7, T__69=8, 
		T__68=9, T__67=10, T__66=11, T__65=12, T__64=13, T__63=14, T__62=15, T__61=16, 
		T__60=17, T__59=18, T__58=19, T__57=20, T__56=21, T__55=22, T__54=23, 
		T__53=24, T__52=25, T__51=26, T__50=27, T__49=28, T__48=29, T__47=30, 
		T__46=31, T__45=32, T__44=33, T__43=34, T__42=35, T__41=36, T__40=37, 
		T__39=38, T__38=39, T__37=40, T__36=41, T__35=42, T__34=43, T__33=44, 
		T__32=45, T__31=46, T__30=47, T__29=48, T__28=49, T__27=50, T__26=51, 
		T__25=52, T__24=53, T__23=54, T__22=55, T__21=56, T__20=57, T__19=58, 
		T__18=59, T__17=60, T__16=61, T__15=62, T__14=63, T__13=64, T__12=65, 
		T__11=66, T__10=67, T__9=68, T__8=69, T__7=70, T__6=71, T__5=72, T__4=73, 
		T__3=74, T__2=75, T__1=76, T__0=77, NUMBER=78, DIGIT=79, COMMENT=80, ID=81, 
		WS=82;
	public static readonly string[] tokenNames = {
		"<INVALID>", "'left'", "'shoulders'", "'your'", "'down'", "'behind'", 
		"'clockwise'", "'hand'", "'neck'", "'arm'", "'to'", "'following'", "'hold'", 
		"'times'", "'elbow'", "'feet'", "'on'", "'EXECUTION'", "'ankle'", "'head'", 
		"'wrists'", "'seconds'", "'foot'", "'GESTURE'", "'steps'", "'repeat'", 
		"'rotate'", "'shoulder'", "'up'", "'frontal'", "'back'", "'legs'", "'horizontal'", 
		"'knee'", "'APP'", "'degrees'", "'spine'", "'arms'", "'in'", "'rapidly'", 
		"','", "'of'", "':'", "'slowly'", "'put'", "'thumbs'", "'mid'", "'POSE'", 
		"'tip'", "'and'", "'align'", "'hands'", "'don't'", "'wrist'", "'.'", "'you'", 
		"'the'", "'sagittal'", "'for'", "'leg'", "'knees'", "'hip'", "'base'", 
		"'elbows'", "'ankles'", "'above'", "'with'", "'front'", "'touch'", "'top'", 
		"'below'", "'hips'", "'right'", "'plane'", "'thumb'", "'tips'", "'counter'", 
		"'point'", "NUMBER", "DIGIT", "COMMENT", "ID", "WS"
	};
	public const int
		RULE_app = 0, RULE_gesture = 1, RULE_pose = 2, RULE_statement = 3, RULE_transform = 4, 
		RULE_rotate_plane_transform = 5, RULE_rotate_direction_transform = 6, 
		RULE_point_to_transform = 7, RULE_body_part = 8, RULE_arm = 9, RULE_leg = 10, 
		RULE_spine = 11, RULE_back = 12, RULE_arms = 13, RULE_legs = 14, RULE_shoulders = 15, 
		RULE_wrists = 16, RULE_elbows = 17, RULE_hands = 18, RULE_hands_tips = 19, 
		RULE_thumbs = 20, RULE_hips = 21, RULE_knees = 22, RULE_ankles = 23, RULE_feet = 24, 
		RULE_you = 25, RULE_joint = 26, RULE_center_joint = 27, RULE_side = 28, 
		RULE_sided_joint = 29, RULE_direction = 30, RULE_angular_direction = 31, 
		RULE_reference_plane = 32, RULE_restriction = 33, RULE_dont = 34, RULE_touch_restriction = 35, 
		RULE_put_restriction = 36, RULE_align_restriction = 37, RULE_relative_direction = 38, 
		RULE_execution = 39, RULE_execution_step = 40, RULE_motion_constraint = 41, 
		RULE_hold_constraint = 42, RULE_repeat = 43;
	public static readonly string[] ruleNames = {
		"app", "gesture", "pose", "statement", "transform", "rotate_plane_transform", 
		"rotate_direction_transform", "point_to_transform", "body_part", "arm", 
		"leg", "spine", "back", "arms", "legs", "shoulders", "wrists", "elbows", 
		"hands", "hands_tips", "thumbs", "hips", "knees", "ankles", "feet", "you", 
		"joint", "center_joint", "side", "sided_joint", "direction", "angular_direction", 
		"reference_plane", "restriction", "dont", "touch_restriction", "put_restriction", 
		"align_restriction", "relative_direction", "execution", "execution_step", 
		"motion_constraint", "hold_constraint", "repeat"
	};

	public override string GrammarFileName { get { return "PreposeGestures.g4"; } }

	public override string[] TokenNames { get { return tokenNames; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public PreposeGesturesParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class AppContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(PreposeGesturesParser.Eof, 0); }
		public ITerminalNode ID() { return GetToken(PreposeGesturesParser.ID, 0); }
		public GestureContext gesture(int i) {
			return GetRuleContext<GestureContext>(i);
		}
		public IReadOnlyList<GestureContext> gesture() {
			return GetRuleContexts<GestureContext>();
		}
		public AppContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_app; }
		public override void EnterRule(IParseTreeListener listener) {
			IPreposeGesturesListener typedListener = listener as IPreposeGesturesListener;
			if (typedListener != null) typedListener.EnterApp(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPreposeGesturesListener typedListener = listener as IPreposeGesturesListener;
			if (typedListener != null) typedListener.ExitApp(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPreposeGesturesVisitor<TResult> typedVisitor = visitor as IPreposeGesturesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitApp(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AppContext app() {
		AppContext _localctx = new AppContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_app);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 88; Match(34);
			State = 89; Match(ID);
			State = 90; Match(42);
			State = 94;
			_errHandler.Sync(this);
			_la = _input.La(1);
			do {
				{
				{
				State = 91; gesture();
				State = 92; Match(54);
				}
				}
				State = 96;
				_errHandler.Sync(this);
				_la = _input.La(1);
			} while ( _la==23 );
			State = 98; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class GestureContext : ParserRuleContext {
		public PoseContext pose(int i) {
			return GetRuleContext<PoseContext>(i);
		}
		public IReadOnlyList<PoseContext> pose() {
			return GetRuleContexts<PoseContext>();
		}
		public ITerminalNode ID() { return GetToken(PreposeGesturesParser.ID, 0); }
		public ExecutionContext execution() {
			return GetRuleContext<ExecutionContext>(0);
		}
		public GestureContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_gesture; }
		public override void EnterRule(IParseTreeListener listener) {
			IPreposeGesturesListener typedListener = listener as IPreposeGesturesListener;
			if (typedListener != null) typedListener.EnterGesture(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPreposeGesturesListener typedListener = listener as IPreposeGesturesListener;
			if (typedListener != null) typedListener.ExitGesture(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPreposeGesturesVisitor<TResult> typedVisitor = visitor as IPreposeGesturesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGesture(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public GestureContext gesture() {
		GestureContext _localctx = new GestureContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_gesture);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 100; Match(23);
			State = 101; Match(ID);
			State = 102; Match(42);
			State = 104;
			_errHandler.Sync(this);
			_la = _input.La(1);
			do {
				{
				{
				State = 103; pose();
				}
				}
				State = 106;
				_errHandler.Sync(this);
				_la = _input.La(1);
			} while ( _la==47 );
			State = 108; execution();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PoseContext : ParserRuleContext {
		public IReadOnlyList<StatementContext> statement() {
			return GetRuleContexts<StatementContext>();
		}
		public ITerminalNode ID() { return GetToken(PreposeGesturesParser.ID, 0); }
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public PoseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_pose; }
		public override void EnterRule(IParseTreeListener listener) {
			IPreposeGesturesListener typedListener = listener as IPreposeGesturesListener;
			if (typedListener != null) typedListener.EnterPose(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPreposeGesturesListener typedListener = listener as IPreposeGesturesListener;
			if (typedListener != null) typedListener.ExitPose(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPreposeGesturesVisitor<TResult> typedVisitor = visitor as IPreposeGesturesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPose(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PoseContext pose() {
		PoseContext _localctx = new PoseContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_pose);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 110; Match(47);
			State = 111; Match(ID);
			State = 112; Match(42);
			State = 113; statement();
			State = 118;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==40) {
				{
				{
				State = 114; Match(40);
				State = 115; statement();
				}
				}
				State = 120;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 121; Match(54);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public RestrictionContext restriction() {
			return GetRuleContext<RestrictionContext>(0);
		}
		public TransformContext transform() {
			return GetRuleContext<TransformContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_statement; }
		public override void EnterRule(IParseTreeListener listener) {
			IPreposeGesturesListener typedListener = listener as IPreposeGesturesListener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPreposeGesturesListener typedListener = listener as IPreposeGesturesListener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPreposeGesturesVisitor<TResult> typedVisitor = visitor as IPreposeGesturesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_statement);
		try {
			State = 125;
			switch (_input.La(1)) {
			case 26:
			case 77:
				EnterOuterAlt(_localctx, 1);
				{
				State = 123; transform();
				}
				break;
			case 44:
			case 50:
			case 52:
			case 68:
				EnterOuterAlt(_localctx, 2);
				{
				State = 124; restriction();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TransformContext : ParserRuleContext {
		public Rotate_direction_transformContext rotate_direction_transform() {
			return GetRuleContext<Rotate_direction_transformContext>(0);
		}
		public Rotate_plane_transformContext rotate_plane_transform() {
			return GetRuleContext<Rotate_plane_transformContext>(0);
		}
		public Point_to_transformContext point_to_transform() {
			return GetRuleContext<Point_to_transformContext>(0);
		}
		public TransformContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_transform; }
		public override void EnterRule(IParseTreeListener listener) {
			IPreposeGesturesListener typedListener = listener as IPreposeGesturesListener;
			if (typedListener != null) typedListener.EnterTransform(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPreposeGesturesListener typedListener = listener as IPreposeGesturesListener;
			if (typedListener != null) typedListener.ExitTransform(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPreposeGesturesVisitor<TResult> typedVisitor = visitor as IPreposeGesturesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTransform(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TransformContext transform() {
		TransformContext _localctx = new TransformContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_transform);
		try {
			State = 130;
			switch ( Interpreter.AdaptivePredict(_input,4,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 127; point_to_transform();
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 128; rotate_plane_transform();
				}
				break;

			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 129; rotate_direction_transform();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Rotate_plane_transformContext : ParserRuleContext {
		public IReadOnlyList<Body_partContext> body_part() {
			return GetRuleContexts<Body_partContext>();
		}
		public Angular_directionContext angular_direction() {
			return GetRuleContext<Angular_directionContext>(0);
		}
		public ITerminalNode NUMBER() { return GetToken(PreposeGesturesParser.NUMBER, 0); }
		public Reference_planeContext reference_plane() {
			return GetRuleContext<Reference_planeContext>(0);
		}
		public Body_partContext body_part(int i) {
			return GetRuleContext<Body_partContext>(i);
		}
		public Rotate_plane_transformContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_rotate_plane_transform; }
		public override void EnterRule(IParseTreeListener listener) {
			IPreposeGesturesListener typedListener = listener as IPreposeGesturesListener;
			if (typedListener != null) typedListener.EnterRotate_plane_transform(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPreposeGesturesListener typedListener = listener as IPreposeGesturesListener;
			if (typedListener != null) typedListener.ExitRotate_plane_transform(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPreposeGesturesVisitor<TResult> typedVisitor = visitor as IPreposeGesturesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRotate_plane_transform(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Rotate_plane_transformContext rotate_plane_transform() {
		Rotate_plane_transformContext _localctx = new Rotate_plane_transformContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_rotate_plane_transform);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 132; Match(26);
			State = 133; Match(3);
			State = 134; body_part();
			State = 150;
			_la = _input.La(1);
			if (_la==40 || _la==49) {
				{
				State = 142;
				_errHandler.Sync(this);
				_la = _input.La(1);
				while (_la==40) {
					{
					{
					State = 135; Match(40);
					State = 137;
					_la = _input.La(1);
					if (_la==3) {
						{
						State = 136; Match(3);
						}
					}

					State = 139; body_part();
					}
					}
					State = 144;
					_errHandler.Sync(this);
					_la = _input.La(1);
				}
				State = 145; Match(49);
				State = 147;
				_la = _input.La(1);
				if (_la==3) {
					{
					State = 146; Match(3);
					}
				}

				State = 149; body_part();
				}
			}

			State = 152; Match(NUMBER);
			State = 153; Match(35);
			State = 154; angular_direction();
			State = 155; Match(16);
			State = 157;
			_la = _input.La(1);
			if (_la==56) {
				{
				State = 156; Match(56);
				}
			}

			State = 159; reference_plane();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Rotate_direction_transformContext : ParserRuleContext {
		public IReadOnlyList<Body_partContext> body_part() {
			return GetRuleContexts<Body_partContext>();
		}
		public DirectionContext direction() {
			return GetRuleContext<DirectionContext>(0);
		}
		public ITerminalNode NUMBER() { return GetToken(PreposeGesturesParser.NUMBER, 0); }
		public Body_partContext body_part(int i) {
			return GetRuleContext<Body_partContext>(i);
		}
		public Rotate_direction_transformContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_rotate_direction_transform; }
		public override void EnterRule(IParseTreeListener listener) {
			IPreposeGesturesListener typedListener = listener as IPreposeGesturesListener;
			if (typedListener != null) typedListener.EnterRotate_direction_transform(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPreposeGesturesListener typedListener = listener as IPreposeGesturesListener;
			if (typedListener != null) typedListener.ExitRotate_direction_transform(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPreposeGesturesVisitor<TResult> typedVisitor = visitor as IPreposeGesturesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRotate_direction_transform(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Rotate_direction_transformContext rotate_direction_transform() {
		Rotate_direction_transformContext _localctx = new Rotate_direction_transformContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_rotate_direction_transform);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 161; Match(26);
			State = 162; Match(3);
			State = 163; body_part();
			State = 179;
			_la = _input.La(1);
			if (_la==40 || _la==49) {
				{
				State = 171;
				_errHandler.Sync(this);
				_la = _input.La(1);
				while (_la==40) {
					{
					{
					State = 164; Match(40);
					State = 166;
					_la = _input.La(1);
					if (_la==3) {
						{
						State = 165; Match(3);
						}
					}

					State = 168; body_part();
					}
					}
					State = 173;
					_errHandler.Sync(this);
					_la = _input.La(1);
				}
				State = 174; Match(49);
				State = 176;
				_la = _input.La(1);
				if (_la==3) {
					{
					State = 175; Match(3);
					}
				}

				State = 178; body_part();
				}
			}

			State = 181; Match(NUMBER);
			State = 182; Match(35);
			State = 186;
			switch ( Interpreter.AdaptivePredict(_input,14,_ctx) ) {
			case 1:
				{
				State = 183; Match(10);
				}
				break;

			case 2:
				{
				State = 184; Match(10);
				State = 185; Match(3);
				}
				break;
			}
			State = 188; direction();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Point_to_transformContext : ParserRuleContext {
		public IReadOnlyList<Body_partContext> body_part() {
			return GetRuleContexts<Body_partContext>();
		}
		public DirectionContext direction() {
			return GetRuleContext<DirectionContext>(0);
		}
		public Body_partContext body_part(int i) {
			return GetRuleContext<Body_partContext>(i);
		}
		public Point_to_transformContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_point_to_transform; }
		public override void EnterRule(IParseTreeListener listener) {
			IPreposeGesturesListener typedListener = listener as IPreposeGesturesListener;
			if (typedListener != null) typedListener.EnterPoint_to_transform(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPreposeGesturesListener typedListener = listener as IPreposeGesturesListener;
			if (typedListener != null) typedListener.ExitPoint_to_transform(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPreposeGesturesVisitor<TResult> typedVisitor = visitor as IPreposeGesturesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPoint_to_transform(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Point_to_transformContext point_to_transform() {
		Point_to_transformContext _localctx = new Point_to_transformContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_point_to_transform);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 190; Match(77);
			State = 192;
			_la = _input.La(1);
			if (_la==3) {
				{
				State = 191; Match(3);
				}
			}

			State = 194; body_part();
			State = 210;
			_la = _input.La(1);
			if (_la==40 || _la==49) {
				{
				State = 202;
				_errHandler.Sync(this);
				_la = _input.La(1);
				while (_la==40) {
					{
					{
					State = 195; Match(40);
					State = 197;
					_la = _input.La(1);
					if (_la==3) {
						{
						State = 196; Match(3);
						}
					}

					State = 199; body_part();
					}
					}
					State = 204;
					_errHandler.Sync(this);
					_la = _input.La(1);
				}
				State = 205; Match(49);
				State = 207;
				_la = _input.La(1);
				if (_la==3) {
					{
					State = 206; Match(3);
					}
				}

				State = 209; body_part();
				}
			}

			State = 215;
			switch ( Interpreter.AdaptivePredict(_input,20,_ctx) ) {
			case 1:
				{
				State = 212; Match(10);
				}
				break;

			case 2:
				{
				State = 213; Match(10);
				State = 214; Match(3);
				}
				break;
			}
			State = 217; direction();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Body_partContext : ParserRuleContext {
		public LegsContext legs() {
			return GetRuleContext<LegsContext>(0);
		}
		public WristsContext wrists() {
			return GetRuleContext<WristsContext>(0);
		}
		public KneesContext knees() {
			return GetRuleContext<KneesContext>(0);
		}
		public FeetContext feet() {
			return GetRuleContext<FeetContext>(0);
		}
		public ThumbsContext thumbs() {
			return GetRuleContext<ThumbsContext>(0);
		}
		public JointContext joint() {
			return GetRuleContext<JointContext>(0);
		}
		public ShouldersContext shoulders() {
			return GetRuleContext<ShouldersContext>(0);
		}
		public ArmContext arm() {
			return GetRuleContext<ArmContext>(0);
		}
		public BackContext back() {
			return GetRuleContext<BackContext>(0);
		}
		public HandsContext hands() {
			return GetRuleContext<HandsContext>(0);
		}
		public HipsContext hips() {
			return GetRuleContext<HipsContext>(0);
		}
		public YouContext you() {
			return GetRuleContext<YouContext>(0);
		}
		public ElbowsContext elbows() {
			return GetRuleContext<ElbowsContext>(0);
		}
		public AnklesContext ankles() {
			return GetRuleContext<AnklesContext>(0);
		}
		public SpineContext spine() {
			return GetRuleContext<SpineContext>(0);
		}
		public Hands_tipsContext hands_tips() {
			return GetRuleContext<Hands_tipsContext>(0);
		}
		public LegContext leg() {
			return GetRuleContext<LegContext>(0);
		}
		public ArmsContext arms() {
			return GetRuleContext<ArmsContext>(0);
		}
		public Body_partContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_body_part; }
		public override void EnterRule(IParseTreeListener listener) {
			IPreposeGesturesListener typedListener = listener as IPreposeGesturesListener;
			if (typedListener != null) typedListener.EnterBody_part(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPreposeGesturesListener typedListener = listener as IPreposeGesturesListener;
			if (typedListener != null) typedListener.ExitBody_part(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPreposeGesturesVisitor<TResult> typedVisitor = visitor as IPreposeGesturesVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBody_part(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Body_partContext body_part() {
		Body_partContext _localctx = new Body_partContext(_ctx, State);
		EnterRule(_localctx, 16, RULE_body_part);
		try {
			State = 237;
			switch ( Interpreter.AdaptivePredict(_input,21,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 219; joint();
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 220; arm();
				}
				break;

			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 221; leg();
				}
				break;

			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 222; spine();
				}
				break;

			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 223; back();
				}
				break;

			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 224; arms();
				}
				break;

			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 225; legs();
				}
				break;

			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 226; shoulders();
				}
				break;

			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				State = 227; wrists();
				}
				break;

			case 10:
				EnterOuterAlt(_localctx, 10);
				{
				State = 228; elbows();
				}
				break;

			case 11:
				EnterOuterAlt(_localctx, 11);
				{
				State = 229; hands();
				}
				break;

			case 12:
				EnterOuterAlt(_localctx, 12);
				{
				State = 230; hands_tips();
				}
				break;

			case 13:
				EnterOuterAlt(_localctx, 13);
				{
				State = 231; thumbs();
				}
				break;

			case 14:
				EnterOuterAlt(_localctx, 14);
				{
				State = 232; hips();
				}
				break;

			case 15:
				EnterOuterAlt(_localctx, 15);
				{
				State = 233; knees();
				}
				break;

			case 16:
				EnterOuterAlt(_localctx, 16);
				{
				State = 234; ankles();
				}
				break;

			case 17:
				EnterOuterAlt(_localctx, 17);
				{
				State = 235; feet();
				}
				break;

			case 18:
				EnterOuterAlt(_localctx, 18);
				{
				State = 236; you();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
